# sherlock

./: .gitignore  Cargo.toml  README.md  package.sh  steeltrace-agent-prompt.md
.github/workflows/: release.yml
examples/: mcp.json
src/: config.rs  index.rs  main.rs  parser.rs  server.rs  tools.rs  types.rs  utils.rs
