[package]
name = "sherlock"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
blake3 = "1.5"
dirs = "5.0"
glob = "0.3"
ignore = "0.4"
notify = "6.1"
parking_lot = "0.12"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
tree-sitter = "0.25"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.1"
tree-sitter-vue = "0.0.3"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-md = "0.5.2"
tree-sitter-yaml = "0.7.2"

# Pour le mode multi-agent (Unix sockets)
[target.'cfg(unix)'.dependencies]
